2002-09-26  Jim Wilson  <wilson@redhat.com>

	* config/tc-v850.c (v850_offset): Use frag_var instead of frag_now_fix
	and frag_more.

2002-09-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (CPU_HAS_MIPS16): Add mips-lsi-elf as MIPS16
	capable configuration.
	(macro_build): Check for MIPS16 capability, not for actual MIPS16 code
	generation.
	(mips_ip): Likewise.

2002-09-26  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (append_insn): Fix jump overflow check.

2002-09-24  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (process_operands): Warn about "lea" segment
	overrides.

2002-09-22  Mark Elbrecht  <snowball3@softhome.net>

	* write.c: Delete set_segment_vma and prototype. Update all callers.

2002-09-21  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (md_apply_fix3): Replace S_IS_EXTERNAL,
	S_IS_WEAK etc. with S_FORCE_RELOC call.  Correct comment.
	Rename "fseg" to "sym_seg".
	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2002-09-20  Nick Clifton  <nickc@redhat.com>

	* symbols.c (colon): Do not allow symbols to be created in the
	absolute section if WORKING_DOT_WORD is not defined and
	new_broken_words would require a new frag to be created.

2002-09-20  Alan Modra  <amodra@bigpond.net.au>

	* expr.c (expr): Simplify foo-foo here.
	(clean_up_expression): Remove O_subtract code.

	* write.h (struct fix): Add fx_dot_value.
	(dot_value): Declare.
	* write.c (dot_value): New var.
	(fix_new_internal): Save dot_value as fx_dot_value.
	(fixup_segment): Adjust fx_offset using fx_dot_value.
	* expr.c (expr): Update dot_value.

2002-09-19  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-i386.c (tc_i386_fix_adjustable): Handle
	BFD_RELOC_386_TLS_IE and BFD_RELOC_386_TLS_GOTIE.
	(BFD_RELOC_386_TLS_IE, BFD_RELOC_386_TLS_GOTIE): Define to 0
	if not defined.
	(lex_got): Handle @GOTNTPOFF and @INDNTPOFF.